# pygamer-examples

./: .gitignore  Cargo.toml  readme.md
.cargo/: config
examples/: neopixel_adc_battery.rs  neopixel_adc_light.rs  neopixel_button.rs  neopixel_easing.rs  neopixel_tilt.rs  neopixel_tilt_rtic.rs  sd_card.rs  usb_poll.rs  usb_serial.rs  usb_serial_rtic.rs
examples/magic_wand/: main.rs
examples/magic_wand/models/: magic_wand_edgebadge.tflite  magic_wand_updated.tflite
